--- a/ViewControllers/ScheduleViewController/ScheduleViewController.xib
+++ b/ViewControllers/ScheduleViewController/ScheduleViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ScheduleViewController">
@@ -13,76 +14,46 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackgroundImageView" translatesAutoresizingMaskIntoConstraints="NO" id="1jL-UI-b3M">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackgroundImageView" translatesAutoresizingMaskIntoConstraints="NO" id="1jL-UI-b3M"/>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="3" sectionFooterHeight="3" translatesAutoresizingMaskIntoConstraints="NO" id="57i-n0-01P">
-                    <rect key="frame" x="20" y="26" width="560" height="484"/>
-                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                    <color key="sectionIndexBackgroundColor" red="1" green="1" blue="1" alpha="0.17718010980000001" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="sectionIndexBackgroundColor" red="1" green="1" blue="1" alpha="0.17718010980000001" colorSpace="custom" customColorSpace="sRGB"/>
                 </tableView>
-                <visualEffectView opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ufj-sV-TiG">
-                    <rect key="frame" x="0.0" y="510" width="600" height="90"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Wjj-W6-zMD">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Zq-LB-iOm">
-                                <rect key="frame" x="185" y="24" width="75" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="未完成">
-                                    <color key="titleColor" red="0.81568627449999997" green="0.4431372549" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zdE-tk-IgC">
-                                <rect key="frame" x="300" y="0.0" width="1" height="90"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="7kj-Oq-bnM"/>
-                                    <constraint firstAttribute="width" constant="1" id="r2h-B0-6HJ"/>
-                                </constraints>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DGP-cV-kUP">
-                                <rect key="frame" x="341" y="24" width="75" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="已完成">
-                                    <color key="titleColor" red="0.81568627449999997" green="0.4431372549" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="DGP-cV-kUP" firstAttribute="centerY" secondItem="Wjj-W6-zMD" secondAttribute="centerY" id="1Pk-EO-CIT"/>
-                            <constraint firstItem="zdE-tk-IgC" firstAttribute="leading" secondItem="4Zq-LB-iOm" secondAttribute="trailing" constant="40" id="834-E0-9Hk"/>
-                            <constraint firstItem="zdE-tk-IgC" firstAttribute="centerX" secondItem="Wjj-W6-zMD" secondAttribute="centerX" id="JDf-ks-loA"/>
-                            <constraint firstItem="zdE-tk-IgC" firstAttribute="centerY" secondItem="Wjj-W6-zMD" secondAttribute="centerY" id="JJU-Xw-ZIz"/>
-                            <constraint firstItem="4Zq-LB-iOm" firstAttribute="centerY" secondItem="Wjj-W6-zMD" secondAttribute="centerY" id="XDh-Fz-2zr"/>
-                            <constraint firstItem="DGP-cV-kUP" firstAttribute="leading" secondItem="zdE-tk-IgC" secondAttribute="trailing" constant="40" id="kNt-dO-r2f"/>
-                        </constraints>
-                    </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQF-W0-vio">
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zCu-4c-toa">
+                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                            <state key="normal" title="Selector">
+                                <color key="titleColor" red="1" green="0.0" blue="0.083229066429999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="90" id="F8u-3T-JqS"/>
+                        <constraint firstItem="zCu-4c-toa" firstAttribute="leading" secondItem="IQF-W0-vio" secondAttribute="leading" constant="15" id="MAD-hk-CYi"/>
+                        <constraint firstItem="zCu-4c-toa" firstAttribute="centerY" secondItem="IQF-W0-vio" secondAttribute="centerY" id="v93-bP-jC8"/>
                     </constraints>
-                    <blurEffect style="light"/>
-                </visualEffectView>
+                </view>
             </subviews>
-            <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="1jL-UI-b3M" secondAttribute="trailing" id="5Tk-ub-GvE"/>
+                <constraint firstAttribute="trailing" secondItem="IQF-W0-vio" secondAttribute="trailing" id="6YY-hD-ddh"/>
                 <constraint firstItem="1jL-UI-b3M" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ah9-vu-eEx"/>
                 <constraint firstAttribute="bottom" secondItem="1jL-UI-b3M" secondAttribute="bottom" id="Ezq-7y-srN"/>
                 <constraint firstAttribute="trailing" secondItem="57i-n0-01P" secondAttribute="trailing" constant="20" id="FJ7-EA-MKb"/>
-                <constraint firstAttribute="bottom" secondItem="ufj-sV-TiG" secondAttribute="bottom" id="IYk-lx-yk1"/>
-                <constraint firstAttribute="trailing" secondItem="ufj-sV-TiG" secondAttribute="trailing" id="OyY-W0-OOr"/>
+                <constraint firstItem="IQF-W0-vio" firstAttribute="top" secondItem="57i-n0-01P" secondAttribute="bottom" id="IzW-aJ-lj5"/>
+                <constraint firstItem="IQF-W0-vio" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="N3L-IB-rSy"/>
                 <constraint firstAttribute="bottom" secondItem="57i-n0-01P" secondAttribute="bottom" constant="90" id="bAy-gb-P5o"/>
                 <constraint firstItem="57i-n0-01P" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="26" id="f6O-bK-0zX"/>
                 <constraint firstItem="57i-n0-01P" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="p00-DH-ytb"/>
                 <constraint firstItem="1jL-UI-b3M" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="uUf-ad-h1F"/>
-                <constraint firstItem="ufj-sV-TiG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="umE-Z8-uV1"/>
+                <constraint firstAttribute="bottom" secondItem="IQF-W0-vio" secondAttribute="bottom" id="vQj-Ej-WpF"/>
             </constraints>
-            <point key="canvasLocation" x="137" y="422"/>
+            <point key="canvasLocation" x="136.5" y="421.5"/>
         </view>
     </objects>
     <resources>
